// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectoryList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Directories"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="project.directoryList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.directoryList.title"
        values={Object {}}
      />
    }
  />
  <ProjectTabs
    active="directory"
    url="/project/1"
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="project.directoryList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.directoryList.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      id="createDirectoryDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <styled.section>
    <Styled(Component)
      headerComponent={
        <ForwardRef(styled.ul)>
          <ForwardRef(styled.li)
            id="headerItem-0"
          >
            12 days ago
          </ForwardRef(styled.li)>
          <ForwardRef(styled.li)
            id="headerItem-1"
          >
            firstName lastName
          </ForwardRef(styled.li)>
        </ForwardRef(styled.ul)>
      }
      key="0"
    >
      <styled.div>
        <H1
          customStyles={
            Object {
              "cursor": "pointer",
            }
          }
          id="directoryName-0"
          onClick={[Function]}
        >
          name
        </H1>
        <Styled(Span)
          onClick={[Function]}
        >
          Edit directory
        </Styled(Span)>
      </styled.div>
    </Styled(Component)>
  </styled.section>
  <NavigationContainer
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDirectoryBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DirectoryList: Component should render correctly with loader 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Directories"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="project.directoryList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.directoryList.title"
        values={Object {}}
      />
    }
  />
  <ProjectTabs
    active="directory"
    url="/project/1"
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="project.directoryList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.directoryList.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      id="createDirectoryDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <Loader />
  <NavigationContainer
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDirectoryBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
